# Rag_Bot-BE

./: .env  auth.py  db.py  hello.py  pyproject.toml  rag-BE - Shortcut.lnk  reqirement.txt  requirements.txt  vercel.json
models/: bot.py  mail.py  user.py
routes/: auth.py  chat.py  meta.py  order.py
schemas/: user.py
