[project]
name = "rag-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.6",
    "jose>=1.0.0",
    "langchain-google-genai>=2.0.7",
    "uvicorn>=0.34.0",
    "pycryptodome>=3.21.0",
    "pydantic[email]>=2.10.4",
    "v>=1",
    "pymupdf>=1.25.1",
    "pypdf2>=3.0.1",
    "python-jose>=3.3.0",
    "sqlmodel>=0.0.22",
    "bcrypt>=4.2.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "bs4>=0.0.2",
    "passlib>=1.7.4",
    "numpy>=2.2.1",
    "metatrader5>=5.0.4803",
    "psutil>=6.1.1",
    "xlsxwriter>=3.2.0",
    "openpyxl>=3.1.5",
    "fastapi-mail>=1.4.2",
    "psycopg2-binary>=2.9.10",
]
